[project]
name = "vsphere-test"
version = "0.1.0"
description = "Testing vSphere connection"
authors = [
    {name = "Thomas Phung",email = "81277197+thomasphung@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "urllib3 (>=2.4.0,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
